[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mantis-delta"
version = "0.1.0"
description = "Mass-Action Network Theory, Inference, and Stability — structural and numerical analysis of chemical reaction networks"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emilio Venegas", email = "emiliovenegas10@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.6",
    "networkx>=3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/emiliovenegas/mantis-delta"
Repository = "https://github.com/emiliovenegas/mantis-delta"
Issues = "https://github.com/emiliovenegas/mantis-delta/issues"

[tool.setuptools.packages.find]
include = ["mantis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
